--- a/design/app/scss/_container.scss
+++ b/design/app/scss/_container.scss
@@ -20,14 +20,16 @@
     background-color: $White;
     margin-top: 2rem;
     padding: 1.5rem;
-    position: relative;
-    top: -20%;
+    position: absolute;
+    top: 120px;
     border-radius: 20px;
     transition: height 2000ms ease-in-out;
 
     @media (min-width: 470px) {
+      min-width: 600px;
+      top: 100px;
       width: 40vw;
-      height: 40%;
+      // height: 40%;
       font-size: 1.5rem;
     }
   }
