--- a/design/app/scss/style.css
+++ b/design/app/scss/style.css
@@ -31,15 +31,16 @@ body {
   background-color: hsl(0, 0%, 100%);
   margin-top: 2rem;
   padding: 1.5rem;
-  position: relative;
-  top: -20%;
+  position: absolute;
+  top: 120px;
   border-radius: 20px;
   transition: height 2000ms ease-in-out;
 }
 @media (min-width: 470px) {
   .container_inner {
+    min-width: 600px;
+    top: 100px;
     width: 40vw;
-    height: 40%;
     font-size: 1.5rem;
   }
 }
